<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:clickable="true"
    android:longClickable="true"
    android:orientation="vertical"
    tools:context="com.xykj.fragments.UserInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_usr_def"
            app:civ_border_color="@color/icon_border_color"
            app:civ_border_width="2dp"
            app:civ_fill_color="@android:color/white" />

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/iv_icon"
            android:text="游客"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nick"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/iv_icon"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_id"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/iv_icon"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_icon"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_order"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/order"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_collect"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/collect"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_usr_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_msg"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/usr_msg"
        android:textSize="18sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="#666666" />

    <TextView
        android:id="@+id/tv_active_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_publish_active"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/active_publish"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_active_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_join_active"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/active_usr_join"
        android:textSize="18sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="#666666" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_settings"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/settings"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_logout"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:text="@string/logout"
        android:textColor="#FF6600"
        android:textSize="18sp" />
</LinearLayout>
