<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticlePublishActivity">

    <RadioGroup
        android:id="@+id/group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/radio_drawable"
            android:text="@string/image" />

        <RadioButton
            android:id="@+id/radio_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:button="@null"
            android:drawableLeft="@drawable/radio_drawable"
            android:text="@string/video" />

        <RadioButton
            android:id="@+id/radio_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:button="@null"
            android:drawableLeft="@drawable/radio_drawable"
            android:text="@string/audio" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/group_type"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_tag_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="#选择标签#"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:hint="@string/hint_content"
                    android:minLines="3" />
            </android.support.design.widget.TextInputLayout>

            <com.xykj.widget.XGridView
                android:id="@+id/grid_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:verticalSpacing="10dp"
                android:visibility="gone"></com.xykj.widget.XGridView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_loc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_loc"
                    android:drawablePadding="10dp"
                    android:text="选择位置"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/iv_cancel_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel_red"
                    android:layout_gravity="center_vertical"
                    android:visibility="invisible"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/ch_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="匿名"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>